<resources>
    <string name="app_name">Geofencer Demo</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDGn7d0iulunZkWMmnkJohxrha_ZTeOqqM</string>


    <string name="instruction_where_description">Where do you want to add a geofence?</string>
    <string name="instruction_where_subtitle_description">Drag the marker to adjust the location</string>
    <string name="instruction_radius_description">Choose the radius</string>
    <string name="instruction_message_description">Enter the message</string>
    <string name="continue_description">Continue</string>
    <string name="error_required">Required</string>
    <string name="message_hint">We arrived! :]</string>
    <string name="radius_description">%1$s meters</string>
    <string name="radius_min_accuracy">Minimum %1$s m (based on GPS accuracy)</string>

    <string name="reminder_removal_alert">Remove geofence?</string>
    <string name="reminder_removal_alert_positive">OK</string>
    <string name="reminder_removal_alert_negative">Cancel</string>

    <string name="reminder_added_success">Geofence added!</string>
    <string name="reminder_removed_success">Geofence removed!</string>

    <string name="marker_content_description">Marker</string>
    <string name="dialog_rationale_permission">We need notification permission to let you know through local push notification when you enter geo fence zone to send</string>
    <string name="dialog_rationale_coarse_location">We need GPS Location in background so that we can guide you when you are at that locations</string>
    <string name="button_allow">Allow</string>
    <string name="button_reject">Reject</string>

    <string name="event_log_title">Live Events</string>
    <string name="event_log_empty">Waiting for events…</string>
    <string name="clear_log">Clear</string>
    <string name="toggle_event_log">Toggle event log</string>
    <string name="map_style">Map style</string>
    <string name="map_style_picker_title">Choose map style</string>
    <string name="high_frequency_tracking">High-frequency tracking</string>
    <string name="toggle_tracking">Toggle location tracking</string>

    <string name="cancel_wizard">Cancel</string>
    <string name="search_street">Search address</string>
    <string name="search_hint">Search street or address…</string>
    <string name="search_no_results">No results found</string>
    <string name="search_error">Search failed, try again</string>
    <string name="drag_marker_hint">Drag the marker to adjust</string>
</resources>
