...
            Icon(Icons.Default.Layers, contentDescription = null)
        }

        if (showLocationControls) {
            SmallFab(
                onClick = onMyLocationClick,
                contentDescription = "My location",
            ) {
                Icon(Icons.Default.MyLocation, contentDescription = null)
            }

            SmallFab(
                onClick = onHighFrequencyToggle,
...
            ) {
                Icon(Icons.Default.Search, contentDescription = null)
            }

            SmallFab(
                onClick = onNewReminderClick,
                contentDescription = "Add geofence",
            ) {
                Icon(Icons.Default.Add, contentDescription = null)
            }
        }
    }
}
...
